--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
     <style class="mpa-style-fix ImageGatherer">.FotorFrame{position:fixed!important}</style><style class="mpa-style-fix SideFunctionPanel">.weui-desktop-online-faq__wrp{top:304px!important;bottom:unset!important}.weui-desktop-online-faq__wrp .weui-desktop-online-faq__switch{width:38px!important}</style>
     <script>
         function fun1(){
-            
+		
+            alert('你相信 光 吗？');
             alert('不是吧！这你也信？'); 
-            alert('那么，你相信光吗？'); 
+            alert('好吧！'); 
             alert('其实世界上并没有奥特曼'); 
             alert('有的只是千万人心中不灭的信仰');
-            alert('2023 希望你能相信光');
+            alert('你还愿意支持奥特曼吗？');
+            alert('我愿意');
+            alert('你想领凹凸曼封面吗？');
+            alert('没有，你走吧，点击关闭就能关闭我了');
+            alert('快走，真的木有！');
+            alert('你怎么这么执着？？看来你还是相信 光');
+            alert('既然如此！');
+            alert('变身');
+            alert('盖亚！！！');
+            alert('盖亚！！！！');
+            alert('2023 希望你能相信光🌞');
             alert('这个世界正在变得更好');
             alert('我们要相信');
             alert('美好的未来终会来临');
-			alert('微信-坐忘道Conquer-Dark');
+            alert('加油！陌生人，祝你兔年吉祥，万事如意！');
+            alert('希望你永远相信-光');
+			alert('vx：坐忘道Conquer-Dark');
             window.close();
         }
   </script>
