--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             alert('这个世界正在变得更好');
             alert('我们要相信');
             alert('美好的未来终会来临');
-            alert('加油！陌生人，祝你兔年吉祥，万事如意！');
+            alert('加油！16班的同学们');
+	    alert('祝你兔年吉祥，万事如意！');
             alert('希望你永远相信光');
 			alert('vx：坐忘道Conquer-Dark');
             window.close();
