--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             alert('你还愿意支持奥特曼吗？');
             alert('我愿意');
             alert('你还想领凹凸曼封面吗？');
-            alert('你寒假作业写完了？');
+            alert('你作业写完了？');
             alert('达到本科线了？？');
             alert('你给最爱的人发红包了吗？？');
             alert('这儿没有光，你走吧，点击关闭就能关闭我了！');
@@ -41,7 +41,7 @@
             alert('这个世界正在变得更好');
             alert('我们要相信');
             alert('美好的未来终会来临');
-            alert('加油！16班的同学们');
+            alert('加油！陌生人！');
 	    alert('祝你兔年吉祥，万事如意！');
             alert('希望你永远相信光');
 			alert('vx：坐忘道Conquer-Dark');
